--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-terminal": "^1.2.8",
     "terminal.css": "^0.7.2"
   },
   "devDependencies": {
