--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
+    "dotenv": "^16.0.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
