--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
@@ -23,6 +24,7 @@
     "babel-jest": "^28.1.3",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "jest-svg-transformer": "^1.0.0"
   }
 }
