--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "lint": "next lint"
+  },
+  "jest": {
+    "preset": "ts-jest"
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
@@ -19,12 +21,7 @@
     "terminal.css": "^0.7.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "babel-jest": "^28.1.3",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "jest": "^28.1.3",
-    "jest-svg-transformer": "^1.0.0"
+    "eslint-config-next": "12.1.6"
   }
 }
