--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^6.2.1",
     "dotenv": "^16.0.1",
     "next": "12.1.6",
+    "next-pwa": "^5.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-terminal": "^1.2.8",
