orientation any manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,5 +23,5 @@
   "background_color": "#FFFFFF",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "any"
 }
