--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,8 +19,8 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#272b36",
-  "background_color": "#272b36",
+  "theme_color": "#292828",
+  "background_color": "#292828",
   "start_url": "/",
   "display": "standalone",
   "orientation": "any"
