--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@vercel/analytics": "^0.1.4",
     "dotenv": "^16.0.1",
     "next": "12.1.6",
     "next-pwa": "5.5.4",
     "react": "18.2.0",
-    "react-detect-offline": "^2.4.5",
+    "react-detect-offline": "2.4.5",
     "react-dom": "18.2.0",
-    "react-terminal": "^1.2.8",
+    "react-terminal": "1.2.8",
     "terminal.css": "^0.7.2"
   },
   "devDependencies": {
