style: :fire: added starndard as linter
added standard as linter to have a much cleaner code

no breaking changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,23 @@
 {
-  "extends": "next/core-web-vitals",
-  "env": {
-    "jest": true
-  }
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "standard"
+    ],
+    "overrides": [
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+        "react/react-in-jsx-scope": "off",
+        "react/react-prop-types": "off"
+    }
 }
