--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "react/react-prop-types": "off"
+        "react/react-prop-types": "off",
+        "react/prop-types": "off",
+        "no-tabs": ["error", { "allowIndentationTabs": true }]
     }
 }
